2010-03-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_save): Do not return before closing file.
	Thanks to Xu Jiandong for the report.

2010-03-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.3 ===

2010-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/*.h, datrie/*.c: Add my e-mail address to license header.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/*.h, datrie/*.c: Add license header to every source file.

2010-02-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Move documentation from *.h to *.c, so libdatrie developers have the
	doc at hand. Users can still read the doxygen-generated doc BTW.

	* datrie/alpha-map.h:
	* datrie/alpha-map.c:
	* datrie/trie.h:
	* datrie/trie.c:
	* datrie/darray.h:
	* datrie/darray.c:
	* datrie/tail.h:
	* datrie/tail.c: Move doc comments from *.h to *.c.
	* doc/Doxyfile.in: Add alpha-map.c, trie.c to INPUT.
	* doc/Makefile.am: Add *.c to doxygen.stamp dependency.

2010-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/darray.c (da_read), datrie/tail.c (tail_read):
	Protect against possible integer overflow on malicious trie file.

2010-02-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

	Be more robust against corrupted trie files.
	* datrie/alpha-map.c (alpha_map_read_bin):
	* datrie/darray.c (da_read):
	* datrie/tail.c (tail_read):
	  - Check all returns from file_read_*() and clean up properly on
	    failures
	  - Adjust existing clean up codes to the new structure

2009-04-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.2 ===

2009-04-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
